--- a/4-guia/ejercicios-4/ej-14-4.tex
+++ b/4-guia/ejercicios-4/ej-14-4.tex
@@ -1,13 +1,17 @@
-\ejercicio
-\begin{enumerate}[label=\roman*)]
-	\item Hallar el desarrollo en base 2 de
-	      \begin{enumerate}[label=(\alph*)]
-		      \item 1365
-		      \item 2800
-		      \item $3\cdot 2^{12}$
-		      \item $13 \cdot 2^n + 5 \cdot 2^{n-1}$
-	      \end{enumerate}
-\end{enumerate}
 
-\separadorCorto
-\Hacer
+\begin{enunciado}{\ejercicio}
+        \begin{enumerate}[label=(\alph*)]
+    \item Hallar el desarrollo en base 2 de
+          \begin{multicols}{4}
+            \begin{enumerate}[label=\roman*.]
+              \item 1365
+              \item 2800
+              \item $3\cdot 2^{12}$
+              \item $13 \cdot 2^n + 5 \cdot 2^{n-1}$
+            \end{enumerate}
+          \end{multicols}
+
+  \item Hallar el desarrollo en base 16 de 2800.
+  \end{enumerate}
+\end{enunciado}
+\hacer
