--- a/4-guia/ejercicios-4/ej-3-4.tex
+++ b/4-guia/ejercicios-4/ej-3-4.tex
@@ -1,13 +1,13 @@
 \begin{enunciado}{\ejercicio}
   Sean $a.\,b \en \enteros$.
-  \begin{enumerate}[label=\roman*)]
+  \begin{enumerate}[label=\alph*)]
     \item Probar que $a-b \divideA a^n - b^n$ para todo $n \en \naturales \ytext a \distinto b \en \enteros$
     \item Probar que si $n$ es un número natural par y $a \distinto -b$, entonces $a+b \divideA a^n - b^n$.
     \item Probar que si $n$ es un número natural impar y $a \distinto -b$, entonces  $a+b \divideA a^n + b^n$.
   \end{enumerate}
 \end{enunciado}
 
-\begin{enumerate}[label=\roman*)]
+\begin{enumerate}[label=\alph*)]
   \item
         \textit{Inducción: }\par
         \textit{Proposición: }
@@ -116,9 +116,10 @@
             \sisolosi
             a + b \divideA a^{k+1} - (-1)^{k+1} b^{k+1} \Tilde
           }
-        $
-        \\
-        Como $p(1),\ p(k),\ p(k+1)$ son verdaderas por principio de inducción lo es también $p(n) \paratodo n \en \naturales$
+        $\par
+
+        Como $p(1),\ p(k) \ytext p(k+1)$
+        son verdaderas por principio de inducción lo es también $p(n) \paratodo n \en \naturales$
 
 
   \item Hecho en el anterior {\Large\faIcon{hands-wash}}.
