--- a/4-guia/ejercicios-4/ej-6-4.tex
+++ b/4-guia/ejercicios-4/ej-6-4.tex
@@ -1,1 +1,7 @@
-\ejercicio\hacer
+\begin{enunciado}{\ejercicio}
+        \begin{enumerate}[label=\alph*)] 
+         \item Probar que el producto de $n$ enteros consecutivos es divisible por $n!$ 
+         \item Probar que $\binom{2n}{n}$ es divisible por 2.
+         \end{enumerate}
+\end{enunciado}
+\hacer
