--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -99,7 +99,7 @@
 \def\ot{\leftarrow}
 \newcommand{\estabien}{{\color{blue} Consultado, está bien. \checkmark}}
 \newcommand{\hacer}{
-  {\color{red!80!black}{\Large \faIcon{radiation} Falta hacerlo!}}\par
+        {\color{red!80!black}{\faIcon{flushed}... hay que hacerlo! \faIcon{sad-cry}}}\par
   {\color{black!70!white}
     \small Si querés mandarlo: Telegram $\to$ \href{https://t.me/+1znt2GV1i8cwMTNh}{\small\faIcon{telegram}},
     o  mejor aún si querés subirlo en \LaTeX $\to$ \href{https://github.com/nad-garraz/algebraUno}{\small \faIcon{github}}.
