--- a/macros/preamble-general.tex
+++ b/macros/preamble-general.tex
@@ -45,8 +45,8 @@
 \usepackage{hyperref} % para que haya links navegables en el PDF
 \hypersetup{
     colorlinks=true,
-    linkcolor=blue!80!black,
-    filecolor=magenta,      
+    linkcolor=blue!90!black,
+    %filecolor=magenta,
     urlcolor=OliveGreen!90!black,
     pdftitle={Álgebra I - Resuelta, sueltísima},
     pdfauthor={Por los alumnos y exalumnos de Álgebra I}
