--- a/1-guia/ejercicios-1/ej-11-1.tex
+++ b/1-guia/ejercicios-1/ej-11-1.tex
@@ -1,27 +1,24 @@
 \begin{enunciado}{\ejercicio}
-
-Hallar contraejemplos para mostrar que las siguientes proposiciones son falsas:
-
+  Hallar contraejemplos para mostrar que las siguientes proposiciones son falsas:
 \end{enunciado}
 
 \begin{enumerate}[label=\roman*)]
-	\item $\paratodo a \en \naturales,\, \frac{a-1}{a}$ no es un número entero.\\
-            La proposición es falsa, dado que si 
-                $a = \green{1}
-                \entonces
-                \frac{\green{1} - 1}{\green{1}} =
-                \frac{0}{1} =
-                0 \en \enteros$
+  \item $\paratodo a \en \naturales,\, \frac{a-1}{a}$ no es un número entero.\par
+        La proposición es falsa, dado que si
+        $a = \green{1}
+          \entonces
+          \frac{\green{1} - 1}{\green{1}} =
+          \frac{0}{1} =
+          0 \en \enteros$
 
-	\item $\paratodo x, y \en \reales$ con $x, y$ positivos, $\sqrt{x+y} = \sqrt{x} + \sqrt{y}$.\\
-	      La proposición es falsa, dado que si.\\
-	      \[
-		      \llaves{c}{
-			      x = 2.\\
-			      y = 2
+  \item $\paratodo x, y \en \reales$ con $x, y$ positivos, $\sqrt{x+y} = \sqrt{x} + \sqrt{y}$.\par
+        La proposición es falsa, dado que si.\par
+        $$
+          \llaves{c}{
+            x = 2.\\
+            y = 2
           } \to \sqrt{2 + 2} = \sqrt{4} = 2 \distinto \sqrt{2} + \sqrt{2} = \sqrt{2}
-	      \]
-
-	\item $\paratodo x \en \reales,\, x^2 > 4 \entonces x > 2$.\\
-	      La  proposición es falsa, dado que si $x = -3$, queda $9 > 4 \entonces -3 > 2$, lo cual es falso.
+        $$
+  \item $\paratodo x \en \reales,\, x^2 > 4 \entonces x > 2$.\par
+        La  proposición es falsa, dado que si $x = -3$, queda $9 > 4 \entonces -3 > 2$, lo cual es falso.
 \end{enumerate}
