--- a/macros/indice.tex
+++ b/macros/indice.tex
@@ -4,17 +4,16 @@
 
 %\guia está definido en padres de este archivo
 
-%phantomsection -> para poder saltar a un lugar sin un anchor.
 \vspace{4cm}
 
 \begin{center}
   \hypertarget{indice-\guia}{\Large\textit{Choose your destiny: }}\par
-        {\tiny\textit{(dobleclick en los ejercicio para saltar) }}
+  {\tiny\textit{(dobleclick en los ejercicio para saltar) }}
 
   \begin{itemize}
-    \item \hyperlink{teoria-\guia}{Notas teóricas}
+    \item[\tiny\faIcon{meh-blank}] \hyperlink{teoria-\guia}{Notas teóricas}
 
-    \item
+    \item[\tiny\faIcon{meh}]
           Ejercicios de la guía:
           \begin{multicols}{8}
             \foreach \ejer in {1,...,\cantidadEjerciciosGuia}{
@@ -22,7 +21,7 @@
               }
           \end{multicols}
 
-    \item Ejercicios Extras
+    \item[\tiny\faIcon{angry}] Ejercicios Extras
           \begin{multicols}{8}
             \foreach \extras in {1,...,\cantidadEjerciciosExtras}{
                 \refEjExtra{ejExtra:\extras}\\
