--- a/4-guia/teoria-4/teoria-4.tex
+++ b/4-guia/teoria-4/teoria-4.tex
@@ -230,7 +230,7 @@
           c \divideA a \ytext d \divideA a \ytext c \cop d \Sii{\red{!!}} c\cdot d \divideA a
         $$
         Al ser $c$ y $d$ coprimos, pienso a $a$ como un número cuya factorización tiene a $c$, $d$ y la coprimicidad hace que en la factorización
-                aparezca $c \cdot d$. {\tiny(no sé, así lo piensa mi \color{pink}{\faIcon{brain}})}
+                aparezca $c \cdot d$. {\tiny(no sé, así lo piensa mi {\color{pink}\faIcon{brain}})}.
 
   \item Sean $a, b, d \en \enteros$ con $d \distinto 0$. Entonces:
         \[
@@ -240,10 +240,10 @@
 
 \begin{itemize}
   \item \textit{Primos y Factorización: }
-        \begin{itemize}
+        \begin{itemize}[label=\tiny\faIcon{meh}]
           \item Sea $p$ primo y sean $a,b \en \enteros$. Entonces:
                 $$
-                  p \divideA a\cdot b \entonces p \divideA a \o p \divideA b
+                  p \divideA a\cdot b \entonces p \divideA a \quad \otext\quad p \divideA b
                 $$
           \item \textit{Si $p$ divide a algún producto de números, tiene que dividir a alguno de los factores $\to$}\par
                 Sean $a_1,\dots, a_n \en \enteros$:\par
